# picturesque

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
notebooks/: Exp.ipynb  Test.ipynb
scripts/: test.py
src/picturesque/: __init__.py  elements.py
tests/: conftest.py  test_elements.py  test_generate_image.py
